--- a/src/components/About/Social/Social.css
+++ b/src/components/About/Social/Social.css
@@ -4,6 +4,7 @@
  justify-content: center;
  align-content: center;
  align-items: flex-end;
+ margin-top: 10px;
  bottom: 0;
  opacity: 1; 
  transition: transform 1s, opacity 1s; 
